--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "semi": true,
     "printWidth": 120,
     "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
     "endOfLine": "auto",
-    "arrowParens": "always"
+    "arrowParens": "always",
+    "bracketSpacing": true
 }
